# FunctionFlow

./: README.md
task1117/: README.md  pyproject.toml
task1117/docs/: SHOWCASE.md
task1117/functionflow/: __init__.py  analyzer.py  cli.py  report.py  visualizer.py
task1117/samples/spaceship/: __init__.py  engine.py  nav.py
task1117/tests/: test_analyzer.py
